Update package.json: prespec and prewatch tasks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "repository": "js-choi/proposal-smart-pipelines",
   "scripts": {
+    "prespec": "mkdir -p out/",
     "spec": "ecmarkup spec.html out/index.html --js out/ecmarkup.js --css out/ecmarkup.css",
+    "prewatch": "mkdir -p out/",
     "watch": "ecmarkup --watch spec.html out/index.html --js out/ecmarkup.js --css out/ecmarkup.css"
   },
   "devDependencies": {
